fix: spacing Horaire

--- a/src/components/HomePage/ContactSection/Horaire/Horaire.scss
+++ b/src/components/HomePage/ContactSection/Horaire/Horaire.scss
@@ -7,3 +7,29 @@
     padding: 1rem;
     margin-bottom: 1.5rem;
 }
+
+.contact__title {
+    font-size: 1.8rem;
+    margin-bottom: 1rem;
+
+    & i {
+        margin-right: 1rem;
+        color: orange;
+    }
+}
+
+.contact__horaire-table {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &  {
+        padding: 1rem;
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    .contact__horaire {
+        width: 40%;
+    }
+}
